Fix spacing spacing issues

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -2,7 +2,7 @@
 
 .about-content {
     background: $linear;
-    padding: 4rem;
+    padding: 4rem 10rem;
 }
 
 .about-wrapper {
