--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -2,7 +2,7 @@
 
 footer {
     background-color: $floral-white;
-    padding: 4rem 4rem 2rem;
+    padding: 4rem 10rem;
 }
 
 .footer-content {
