--- a/src/css/hero.scss
+++ b/src/css/hero.scss
@@ -14,7 +14,7 @@
     z-index: 2;
     position: absolute;
     left: 0;
-    padding: 2rem 2rem 2rem 4rem;
+    padding: 2rem 2rem 2rem 10rem;
 }
   
 .hero-img {
@@ -22,10 +22,10 @@
     top: 0;
     right: 0;
     height: 100%;
-    width: 65%;
+    width: 50%;
     object-fit: contain;
     z-index: 1;
-    padding: 2rem 4rem 2rem 2rem;
+    padding: 2rem 10rem 2rem 2rem;
 }
 
 .hero-text-sub {
