--- a/src/css/skills-and-tools.scss
+++ b/src/css/skills-and-tools.scss
@@ -1,7 +1,7 @@
 @import 'functions.scss';
 
 .skills-and-tools {
-    padding: 4rem;
+    padding: 4rem 10rem;
     @include display-flex(column, center, center, initial);
 }
 
