--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -78,7 +78,7 @@
   z-index: 2;
   position: absolute;
   left: 0;
-  padding: 2rem 2rem 2rem 4rem;
+  padding: 2rem 2rem 2rem 10rem;
 }
 
 .hero-img {
@@ -86,10 +86,10 @@
   top: 0;
   right: 0;
   height: 100%;
-  width: 65%;
+  width: 50%;
   object-fit: contain;
   z-index: 1;
-  padding: 2rem 4rem 2rem 2rem;
+  padding: 2rem 10rem 2rem 2rem;
 }
 
 .hero-text-sub {
@@ -109,7 +109,7 @@
 /* DISPLAY */
 .about-content {
   background: linear-gradient(180deg, #F8F3EB 0%, #FCFAF7 15.78%, #FCFAF7 100%);
-  padding: 4rem;
+  padding: 4rem 10rem;
 }
 
 .about-wrapper {
@@ -142,7 +142,7 @@
 /* COLORS */
 /* DISPLAY */
 .skills-and-tools {
-  padding: 4rem;
+  padding: 4rem 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -223,11 +223,7 @@
 /* DISPLAY */
 .projects-content {
   background-color: #F8F3EB;
-  padding: 4rem 0;
-}
-
-.project-text-container {
-  padding: 0 4rem;
+  padding: 4rem 10rem;
 }
 
 .projects-content button {
@@ -236,6 +232,9 @@
 }
 
 .projects-intro-text {
+  color: #444;
+  font-size: 2.125rem;
+  font-weight: 400;
   margin-top: 2rem;
 }
 
@@ -359,7 +358,7 @@
 /* DISPLAY */
 footer {
   background-color: #FCFAF7;
-  padding: 4rem 4rem 2rem;
+  padding: 4rem 10rem;
 }
 
 .footer-content {
